[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-bisect-fix"
version = "0.1.0"
description = "CLI tool that automates root cause analysis of git regressions"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "gitpython>=3.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "bisect"]
